2012-04-07  Karl Berry  <karl@tug.org>

	* texmf.cnf (glob_str_size): increase from 5000 to 20000 per Akira,
	06 Apr 2012 10:25:18.

2012-03-11  Karl Berry  <karl@tug.org>

	* *.c: prepend kpathsea: to warnings.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'the address of XXX will always evaluate as true' warnings.
	* lib.h (STREQ): Test '(s) != NULL' instead of '(s)'.
	Gcc >=4.3 produces identical code but -Wall yields no warning.

2012-03-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-unistd.h: Declare getopt() (via  <kpathsea/getopt.h>) but
	not getopt_long().

	* getopt.h: With __need_getopt declare only getopt() but not
	getopt_long() (with 'struct option').

	* getopt.[ch]: Drop pre-ANSI C non-prototype declarations.

2012-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-unistd.h [CYGWIN]: Explicitly #include <kpathsea/getopt.h>
	such that <getopt.h> from Cygwin will be skipped.

2012-02-27  Ken Brown  <kbrow1i@gmail.com>

	* getopt.h: Cygwin requires getopt() prototype.

2011-12-22  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEX.pmpost, TEXINPUTS.(e)up(la)tex): new definitions,
	from Norbert.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-27  Karl Berry  <karl@tug.org>

	* texmf.cnf (FONTCONFIG_*): doc+formatting fix.

2011-10-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, win32lib.h: use const char * in system() and popen().

2011-09-30  Karl Berry  <karl@tug.org>

	* types.h (kpse_{ris,bltxml}_format): new types.
	* tex-file.c ({RIS,BLTXML}_ENVS): new defines.
	(kpse_init_format): initialize them.
	* texmf.cnf ({RIS,BLTXML}INPUTS): new definitions.
	Request from Phil Kime, tex-k 25 Sep 2011 16:46:07.

2011-08-28  Karl Berry  <karl@tug.org>

	* texmf.cnf (LUAINPUTS.lualatex, LUAINPUTS.dvilualatex): new defns.
	(LUAINPUTS): duplicate value of TEXINPUTS.luatex, instead
	of using $TEXINPUTS.
	Report from Herbert Voss, 15 Aug 2011 23:53:45,