@@ -1,3 +1,13 @@
+2012-04-09  Karl Berry  <karl@tug.org>
+
+	* getopt.h (getopt) [!__cplusplus]: do not declare when compiling
+	with C++, since g++ 4.7.0 introduced an incompatible declaration.
+	http://bugs.debian.org/667392
+
+	* c-std.h (popen, pclose) [!VMS]: remove these decls to avoid
+	conflicts, hoping they are now always in the system libraries.
+	http://bugs.debian.org/64524
+
 2012-04-07  Karl Berry  <karl@tug.org>
 
 	* texmf.cnf (glob_str_size): increase from 5000 to 20000 per Akira,
